--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="C:\Users\asing\Desktop\web development\HTML\IMAGES\Ashutosh edit pic.-modified.png" alt="Ashutosh Profile Photo"></td>
+            <td><img src="IMAGES\Ashutosh edit pic.-modified.png" alt="Ashutosh Profile Photo"></td>
             <td><h1>ASHUTOSH SINGH</h1>
                 <p><em><strong><a href="https://bujhansi.ac.in/index.aspx">Bundelkhand University</a></strong></em>
                 <br>Bachelor of Technology
@@ -69,7 +69,7 @@
         </tr>
         <tr>
             <td>Web Development</td>
-            <td><img src="C:\Users\asing\Desktop\web development\HTML\IMAGES\homer-simpson-i-see.gif"></td>
+            <td><img src="IMAGES\homer-simpson-i-see.gif"></td>
         </tr>
     </table>
     <hr>
